syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.content4devs.v1.user";

package br.com.content4devs.v1.user;

service UserService {
  rpc create(UserReq) returns (UserRes) {}
  rpc getAll(EmptyReq) returns (UserResList) {}
  rpc getAllServerStream(EmptyReq) returns (stream UserRes) {}
}

message EmptyReq {}

message UserReq {
  string name = 1;
  string email = 2;
}

message UserRes {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message UserResList {
  repeated UserRes users = 1;
}

